Removed button on mobile view; resolved all comments

--- a/packages/web/src/components/admin_page/s3_page/s3.css
+++ b/packages/web/src/components/admin_page/s3_page/s3.css
@@ -5,7 +5,6 @@
 
 .s3-upload-image {
     background-color: gray;
-    padding-top: 4vw;
     height: 100vh;
     display: flex;
     flex-direction: column;
